--- a/Formula 1 EDA.ipynb
+++ b/Formula 1 EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1668,6 +1668,201 @@
     "display(seasons.head())\n",
     "display(sprint_results.head())\n",
     "display(status.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sqlalchemy import create_engine, Column, Integer, String, Float, ForeignKey\n",
+    "from sqlalchemy.orm import declarative_base\n",
+    "from sqlalchemy.orm import sessionmaker, relationship\n",
+    "from sqlalchemy import text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define the SQLite database\n",
+    "engine = create_engine('sqlite:///f1_data.db')\n",
+    "Base = declarative_base()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "77"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "circuits.to_sql('circuits', engine, index= False, if_exists= 'replace')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 'albert_park', 'Albert Park Grand Prix Circuit', 'Melbourne', 'Australia', -37.8497, 144.968, 10, 'http://en.wikipedia.org/wiki/Melbourne_Grand_Prix_Circuit')\n",
+      "(2, 'sepang', 'Sepang International Circuit', 'Kuala Lumpur', 'Malaysia', 2.76083, 101.738, 18, 'http://en.wikipedia.org/wiki/Sepang_International_Circuit')\n",
+      "(3, 'bahrain', 'Bahrain International Circuit', 'Sakhir', 'Bahrain', 26.0325, 50.5106, 7, 'http://en.wikipedia.org/wiki/Bahrain_International_Circuit')\n",
+      "(4, 'catalunya', 'Circuit de Barcelona-Catalunya', 'Montmeló', 'Spain', 41.57, 2.26111, 109, 'http://en.wikipedia.org/wiki/Circuit_de_Barcelona-Catalunya')\n",
+      "(5, 'istanbul', 'Istanbul Park', 'Istanbul', 'Turkey', 40.9517, 29.405, 130, 'http://en.wikipedia.org/wiki/Istanbul_Park')\n"
+     ]
+    }
+   ],
+   "source": [
+    "with engine.connect() as connection:\n",
+    "   connection.execute(\"\n",
+    "                      ALTER TABLE circuits\n",
+    "                      ADD PRIMARY KEY ('circuit_id')\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>circuitId</th>\n",
+       "      <th>circuitRef</th>\n",
+       "      <th>name</th>\n",
+       "      <th>location</th>\n",
+       "      <th>country</th>\n",
+       "      <th>lat</th>\n",
+       "      <th>lng</th>\n",
+       "      <th>alt</th>\n",
+       "      <th>url</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>14</td>\n",
+       "      <td>monza</td>\n",
+       "      <td>Autodromo Nazionale di Monza</td>\n",
+       "      <td>Monza</td>\n",
+       "      <td>Italy</td>\n",
+       "      <td>45.6156</td>\n",
+       "      <td>9.28111</td>\n",
+       "      <td>162</td>\n",
+       "      <td>http://en.wikipedia.org/wiki/Autodromo_Naziona...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>21</td>\n",
+       "      <td>imola</td>\n",
+       "      <td>Autodromo Enzo e Dino Ferrari</td>\n",
+       "      <td>Imola</td>\n",
+       "      <td>Italy</td>\n",
+       "      <td>44.3439</td>\n",
+       "      <td>11.71670</td>\n",
+       "      <td>37</td>\n",
+       "      <td>http://en.wikipedia.org/wiki/Autodromo_Enzo_e_...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>65</td>\n",
+       "      <td>pescara</td>\n",
+       "      <td>Pescara Circuit</td>\n",
+       "      <td>Pescara</td>\n",
+       "      <td>Italy</td>\n",
+       "      <td>42.4750</td>\n",
+       "      <td>14.15080</td>\n",
+       "      <td>129</td>\n",
+       "      <td>http://en.wikipedia.org/wiki/Pescara_Circuit</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>76</td>\n",
+       "      <td>mugello</td>\n",
+       "      <td>Autodromo Internazionale del Mugello</td>\n",
+       "      <td>Mugello</td>\n",
+       "      <td>Italy</td>\n",
+       "      <td>43.9975</td>\n",
+       "      <td>11.37190</td>\n",
+       "      <td>255</td>\n",
+       "      <td>http://en.wikipedia.org/wiki/Mugello_Circuit</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   circuitId circuitRef                                  name location  \\\n",
+       "0         14      monza          Autodromo Nazionale di Monza    Monza   \n",
+       "1         21      imola         Autodromo Enzo e Dino Ferrari    Imola   \n",
+       "2         65    pescara                       Pescara Circuit  Pescara   \n",
+       "3         76    mugello  Autodromo Internazionale del Mugello  Mugello   \n",
+       "\n",
+       "  country      lat       lng  alt  \\\n",
+       "0   Italy  45.6156   9.28111  162   \n",
+       "1   Italy  44.3439  11.71670   37   \n",
+       "2   Italy  42.4750  14.15080  129   \n",
+       "3   Italy  43.9975  11.37190  255   \n",
+       "\n",
+       "                                                 url  \n",
+       "0  http://en.wikipedia.org/wiki/Autodromo_Naziona...  \n",
+       "1  http://en.wikipedia.org/wiki/Autodromo_Enzo_e_...  \n",
+       "2       http://en.wikipedia.org/wiki/Pescara_Circuit  \n",
+       "3       http://en.wikipedia.org/wiki/Mugello_Circuit  "
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "query = \"SELECT * FROM circuits WHERE country = 'Italy'\"\n",
+    "italian_circuits = pd.read_sql(\"SELECT * FROM circuits WHERE country = 'Italy'\", engine)\n",
+    "italian_circuits"
    ]
   }
  ],
