--- a/Formula 1 EDA.ipynb
+++ b/Formula 1 EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1672,7 +1672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1684,7 +1684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1715,38 +1715,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(1, 'albert_park', 'Albert Park Grand Prix Circuit', 'Melbourne', 'Australia', -37.8497, 144.968, 10, 'http://en.wikipedia.org/wiki/Melbourne_Grand_Prix_Circuit')\n",
-      "(2, 'sepang', 'Sepang International Circuit', 'Kuala Lumpur', 'Malaysia', 2.76083, 101.738, 18, 'http://en.wikipedia.org/wiki/Sepang_International_Circuit')\n",
-      "(3, 'bahrain', 'Bahrain International Circuit', 'Sakhir', 'Bahrain', 26.0325, 50.5106, 7, 'http://en.wikipedia.org/wiki/Bahrain_International_Circuit')\n",
-      "(4, 'catalunya', 'Circuit de Barcelona-Catalunya', 'Montmeló', 'Spain', 41.57, 2.26111, 109, 'http://en.wikipedia.org/wiki/Circuit_de_Barcelona-Catalunya')\n",
-      "(5, 'istanbul', 'Istanbul Park', 'Istanbul', 'Turkey', 40.9517, 29.405, 130, 'http://en.wikipedia.org/wiki/Istanbul_Park')\n"
-     ]
+     "data": {
+      "text/plain": [
+       "75"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "with engine.connect() as connection:\n",
-    "   connection.execute(\"\n",
-    "                      ALTER TABLE circuits\n",
-    "                      ADD PRIMARY KEY ('circuit_id')\")"
+    "drivers.to_sql('drivers', engine, index= False, if_exists= 'replace')\n",
+    "driver_standings.to_sql('driver_standings', engine, index= False, if_exists= 'replace')\n",
+    "constructor_results.to_sql('constructor_results', engine, index= False, if_exists= 'replace')\n",
+    "constructor_standings.to_sql('constructor_standings', engine, index= False, if_exists= 'replace')\n",
+    "constructors.to_sql('constructors', engine, index= False, if_exists= 'replace')\n",
+    "races.to_sql('races', engine, index= False, if_exists= 'replace')\n",
+    "lap_times.to_sql('lap_times', engine, index= False, if_exists= 'replace')\n",
+    "pit_stops.to_sql('pit_stops', engine, index= False, if_exists= 'replace')\n",
+    "qualifying.to_sql('qualifying', engine, index = False, if_exists= 'replace')\n",
+    "status.to_sql('status', engine, index = False, if_exists= 'replace')\n",
+    "results.to_sql('results', engine, index = False, if_exists= 'replace')\n",
+    "sprint_results.to_sql('sprint_results', engine, index = False, if_exists= 'replace')\n",
+    "seasons.to_sql('seasons', engine, index = False, if_exists= 'replace')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# with engine.connect() as connection:\n",
+    "#    connection.execute(\"\n",
+    "#                       ALTER TABLE circuits\n",
+    "#                       ADD PRIMARY KEY ('circuit_id')\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
