--- a/Formula 1 EDA.ipynb
+++ b/Formula 1 EDA.ipynb
@@ -1672,14 +1672,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sqlalchemy import create_engine, Column, Integer, String, Float, ForeignKey\n",
+    "from sqlalchemy import MetaData, create_engine, Column, Integer, String, Float, ForeignKey\n",
     "from sqlalchemy.orm import declarative_base\n",
     "from sqlalchemy.orm import sessionmaker, relationship\n",
     "from sqlalchemy import text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "metadata =MetaData()"
    ]
   },
   {
@@ -1695,27 +1704,198 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with engine.connect() as connection:\n",
+    "    connection.execute(text(\"\"\"\n",
+    "    CREATE TABLE circuits(\n",
+    "        circuitId INTEGER PRIMARY KEY,\n",
+    "        circuitRef TEXT NOT NULL,\n",
+    "        name TEXT NOT NULL,\n",
+    "        location TEXT NOT NULL,\n",
+    "        country TEXT NOT NULL,\n",
+    "        lat FLOAT,\n",
+    "        lng FLOAT,\n",
+    "        alt INTEGER);\"\"\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>raceId</th>\n",
+       "      <th>year</th>\n",
+       "      <th>round</th>\n",
+       "      <th>circuitId</th>\n",
+       "      <th>name</th>\n",
+       "      <th>date</th>\n",
+       "      <th>time</th>\n",
+       "      <th>url</th>\n",
+       "      <th>fp1_date</th>\n",
+       "      <th>fp1_time</th>\n",
+       "      <th>fp2_date</th>\n",
+       "      <th>fp2_time</th>\n",
+       "      <th>fp3_date</th>\n",
+       "      <th>fp3_time</th>\n",
+       "      <th>quali_date</th>\n",
+       "      <th>quali_time</th>\n",
+       "      <th>sprint_date</th>\n",
+       "      <th>sprint_time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Australian Grand Prix</td>\n",
+       "      <td>2009-03-29</td>\n",
+       "      <td>06:00:00</td>\n",
+       "      <td>http://en.wikipedia.org/wiki/2009_Australian_G...</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>\\N</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "77"
+       "   raceId  year  round  circuitId                   name        date  \\\n",
+       "0       1  2009      1          1  Australian Grand Prix  2009-03-29   \n",
+       "\n",
+       "       time                                                url fp1_date  \\\n",
+       "0  06:00:00  http://en.wikipedia.org/wiki/2009_Australian_G...       \\N   \n",
+       "\n",
+       "  fp1_time fp2_date fp2_time fp3_date fp3_time quali_date quali_time  \\\n",
+       "0       \\N       \\N       \\N       \\N       \\N         \\N         \\N   \n",
+       "\n",
+       "  sprint_date sprint_time  \n",
+       "0          \\N          \\N  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "circuits.to_sql('circuits', engine, index= False, if_exists= 'replace')"
+    "races.head(1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with engine.connect() as connection:\n",
+    "    connection.execute(text(\"\"\"\n",
+    "    CREATE TABLE race(\n",
+    "        raceId INTEGER PRIMARY KEY,\n",
+    "        year INTEGER,\n",
+    "        round INTEGER,\n",
+    "        circuitId INTEGER,\n",
+    "        name TEXT,\n",
+    "        date TEXT,\n",
+    "        time TEXT,\n",
+    "        FOREIGN KEY (circuitId) REFERENCES circuits(circuitId) )\n",
+    "    \"\"\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with engine.connect() as connection:\n",
+    "    connection.execute(text(\"\"\"\n",
+    "    CREATE TABLE drivers(\n",
+    "        driverId INTEGER PRIMARY KEY,\n",
+    "        driverRef TEXT,\n",
+    "        code TEXT,\n",
+    "        forename TEXT,\n",
+    "        surname TEXT)\n",
+    "    \"\"\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with engine.connect() as connection:\n",
+    "    connection.execute(text(\"\"\"\n",
+    "    CREATE TABLE driver_standings(\n",
+    "        driverStandingsId INTEGER PRIMARY KEY,\n",
+    "        raceId INTEGER,\n",
+    "        circuitId INTEGER,\n",
+    "        points INTEGER,\n",
+    "        FOREIGN KEY (raceID) REFERENCES race(raceId),\n",
+    "        FOREIGN KEY (circuitId) REFERENCES circuits(circuitId))\n",
+    "    \"\"\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with engine.connect() as connection:\n",
+    "    connection.execute(text(\"\"\"\n",
+    "    CREATE TABLE constructors(\n",
+    "        constructorId INTEGER PRIMARY KEY,\n",
+    "        constructorRef TEXT,\n",
+    "        name TEXT)\n",
+    "    \"\"\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1730,31 +1910,30 @@
     }
    ],
    "source": [
-    "drivers.to_sql('drivers', engine, index= False, if_exists= 'replace')\n",
-    "driver_standings.to_sql('driver_standings', engine, index= False, if_exists= 'replace')\n",
-    "constructor_results.to_sql('constructor_results', engine, index= False, if_exists= 'replace')\n",
-    "constructor_standings.to_sql('constructor_standings', engine, index= False, if_exists= 'replace')\n",
-    "constructors.to_sql('constructors', engine, index= False, if_exists= 'replace')\n",
-    "races.to_sql('races', engine, index= False, if_exists= 'replace')\n",
-    "lap_times.to_sql('lap_times', engine, index= False, if_exists= 'replace')\n",
-    "pit_stops.to_sql('pit_stops', engine, index= False, if_exists= 'replace')\n",
-    "qualifying.to_sql('qualifying', engine, index = False, if_exists= 'replace')\n",
-    "status.to_sql('status', engine, index = False, if_exists= 'replace')\n",
-    "results.to_sql('results', engine, index = False, if_exists= 'replace')\n",
-    "sprint_results.to_sql('sprint_results', engine, index = False, if_exists= 'replace')\n",
-    "seasons.to_sql('seasons', engine, index = False, if_exists= 'replace')"
+    "# circuits.to_sql('circuits', engine, index= False, if_exists= 'replace')\n",
+    "# drivers.to_sql('drivers', engine, index= False, if_exists= 'replace')\n",
+    "# driver_standings.to_sql('driver_standings', engine, index= False, if_exists= 'replace')\n",
+    "# constructor_results.to_sql('constructor_results', engine, index= False, if_exists= 'replace')\n",
+    "# constructor_standings.to_sql('constructor_standings', engine, index= False, if_exists= 'replace')\n",
+    "# constructors.to_sql('constructors', engine, index= False, if_exists= 'replace')\n",
+    "# races.to_sql('races', engine, index= False, if_exists= 'replace')\n",
+    "# lap_times.to_sql('lap_times', engine, index= False, if_exists= 'replace')\n",
+    "# pit_stops.to_sql('pit_stops', engine, index= False, if_exists= 'replace')\n",
+    "# qualifying.to_sql('qualifying', engine, index = False, if_exists= 'replace')\n",
+    "# status.to_sql('status', engine, index = False, if_exists= 'replace')\n",
+    "# results.to_sql('results', engine, index = False, if_exists= 'replace')\n",
+    "# sprint_results.to_sql('sprint_results', engine, index = False, if_exists= 'replace')\n",
+    "# seasons.to_sql('seasons', engine, index = False, if_exists= 'replace')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# with engine.connect() as connection:\n",
-    "#    connection.execute(\"\n",
-    "#                       ALTER TABLE circuits\n",
-    "#                       ADD PRIMARY KEY ('circuit_id')\")"
+    "# metadata.reflect(bind=engine)\n",
+    "# metadata.drop_all(bind= engine)"
    ]
   },
   {
@@ -1873,9 +2052,9 @@
     }
    ],
    "source": [
-    "query = \"SELECT * FROM circuits WHERE country = 'Italy'\"\n",
-    "italian_circuits = pd.read_sql(\"SELECT * FROM circuits WHERE country = 'Italy'\", engine)\n",
-    "italian_circuits"
+    "# query = \"SELECT * FROM circuits WHERE country = 'Italy'\"\n",
+    "# italian_circuits = pd.read_sql(\"SELECT * FROM circuits WHERE country = 'Italy'\", engine)\n",
+    "# italian_circuits"
    ]
   }
  ],
