--- a/Formula 1 EDA.ipynb
+++ b/Formula 1 EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1672,7 +1672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1684,7 +1684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1693,7 +1693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1704,198 +1704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with engine.connect() as connection:\n",
-    "    connection.execute(text(\"\"\"\n",
-    "    CREATE TABLE circuits(\n",
-    "        circuitId INTEGER PRIMARY KEY,\n",
-    "        circuitRef TEXT NOT NULL,\n",
-    "        name TEXT NOT NULL,\n",
-    "        location TEXT NOT NULL,\n",
-    "        country TEXT NOT NULL,\n",
-    "        lat FLOAT,\n",
-    "        lng FLOAT,\n",
-    "        alt INTEGER);\"\"\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>raceId</th>\n",
-       "      <th>year</th>\n",
-       "      <th>round</th>\n",
-       "      <th>circuitId</th>\n",
-       "      <th>name</th>\n",
-       "      <th>date</th>\n",
-       "      <th>time</th>\n",
-       "      <th>url</th>\n",
-       "      <th>fp1_date</th>\n",
-       "      <th>fp1_time</th>\n",
-       "      <th>fp2_date</th>\n",
-       "      <th>fp2_time</th>\n",
-       "      <th>fp3_date</th>\n",
-       "      <th>fp3_time</th>\n",
-       "      <th>quali_date</th>\n",
-       "      <th>quali_time</th>\n",
-       "      <th>sprint_date</th>\n",
-       "      <th>sprint_time</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2009</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Australian Grand Prix</td>\n",
-       "      <td>2009-03-29</td>\n",
-       "      <td>06:00:00</td>\n",
-       "      <td>http://en.wikipedia.org/wiki/2009_Australian_G...</td>\n",
-       "      <td>\\N</td>\n",
-       "      <td>\\N</td>\n",
-       "      <td>\\N</td>\n",
-       "      <td>\\N</td>\n",
-       "      <td>\\N</td>\n",
-       "      <td>\\N</td>\n",
-       "      <td>\\N</td>\n",
-       "      <td>\\N</td>\n",
-       "      <td>\\N</td>\n",
-       "      <td>\\N</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   raceId  year  round  circuitId                   name        date  \\\n",
-       "0       1  2009      1          1  Australian Grand Prix  2009-03-29   \n",
-       "\n",
-       "       time                                                url fp1_date  \\\n",
-       "0  06:00:00  http://en.wikipedia.org/wiki/2009_Australian_G...       \\N   \n",
-       "\n",
-       "  fp1_time fp2_date fp2_time fp3_date fp3_time quali_date quali_time  \\\n",
-       "0       \\N       \\N       \\N       \\N       \\N         \\N         \\N   \n",
-       "\n",
-       "  sprint_date sprint_time  \n",
-       "0          \\N          \\N  "
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "races.head(1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with engine.connect() as connection:\n",
-    "    connection.execute(text(\"\"\"\n",
-    "    CREATE TABLE race(\n",
-    "        raceId INTEGER PRIMARY KEY,\n",
-    "        year INTEGER,\n",
-    "        round INTEGER,\n",
-    "        circuitId INTEGER,\n",
-    "        name TEXT,\n",
-    "        date TEXT,\n",
-    "        time TEXT,\n",
-    "        FOREIGN KEY (circuitId) REFERENCES circuits(circuitId) )\n",
-    "    \"\"\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with engine.connect() as connection:\n",
-    "    connection.execute(text(\"\"\"\n",
-    "    CREATE TABLE drivers(\n",
-    "        driverId INTEGER PRIMARY KEY,\n",
-    "        driverRef TEXT,\n",
-    "        code TEXT,\n",
-    "        forename TEXT,\n",
-    "        surname TEXT)\n",
-    "    \"\"\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with engine.connect() as connection:\n",
-    "    connection.execute(text(\"\"\"\n",
-    "    CREATE TABLE driver_standings(\n",
-    "        driverStandingsId INTEGER PRIMARY KEY,\n",
-    "        raceId INTEGER,\n",
-    "        circuitId INTEGER,\n",
-    "        points INTEGER,\n",
-    "        FOREIGN KEY (raceID) REFERENCES race(raceId),\n",
-    "        FOREIGN KEY (circuitId) REFERENCES circuits(circuitId))\n",
-    "    \"\"\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 42,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with engine.connect() as connection:\n",
-    "    connection.execute(text(\"\"\"\n",
-    "    CREATE TABLE constructors(\n",
-    "        constructorId INTEGER PRIMARY KEY,\n",
-    "        constructorRef TEXT,\n",
-    "        name TEXT)\n",
-    "    \"\"\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1904,26 +1713,57 @@
        "75"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# circuits.to_sql('circuits', engine, index= False, if_exists= 'replace')\n",
-    "# drivers.to_sql('drivers', engine, index= False, if_exists= 'replace')\n",
-    "# driver_standings.to_sql('driver_standings', engine, index= False, if_exists= 'replace')\n",
-    "# constructor_results.to_sql('constructor_results', engine, index= False, if_exists= 'replace')\n",
-    "# constructor_standings.to_sql('constructor_standings', engine, index= False, if_exists= 'replace')\n",
-    "# constructors.to_sql('constructors', engine, index= False, if_exists= 'replace')\n",
-    "# races.to_sql('races', engine, index= False, if_exists= 'replace')\n",
-    "# lap_times.to_sql('lap_times', engine, index= False, if_exists= 'replace')\n",
-    "# pit_stops.to_sql('pit_stops', engine, index= False, if_exists= 'replace')\n",
-    "# qualifying.to_sql('qualifying', engine, index = False, if_exists= 'replace')\n",
-    "# status.to_sql('status', engine, index = False, if_exists= 'replace')\n",
-    "# results.to_sql('results', engine, index = False, if_exists= 'replace')\n",
-    "# sprint_results.to_sql('sprint_results', engine, index = False, if_exists= 'replace')\n",
-    "# seasons.to_sql('seasons', engine, index = False, if_exists= 'replace')"
+    "# pushing dataframe into sql tables\n",
+    "circuits.to_sql('circuits', engine, index= False, if_exists= 'replace')\n",
+    "drivers.to_sql('drivers', engine, index= False, if_exists= 'replace')\n",
+    "driver_standings.to_sql('driver_standings', engine, index= False, if_exists= 'replace')\n",
+    "constructor_results.to_sql('constructor_results', engine, index= False, if_exists= 'replace')\n",
+    "constructor_standings.to_sql('constructor_standings', engine, index= False, if_exists= 'replace')\n",
+    "constructors.to_sql('constructors', engine, index= False, if_exists= 'replace')\n",
+    "races.to_sql('races', engine, index= False, if_exists= 'replace')\n",
+    "lap_times.to_sql('lap_times', engine, index= False, if_exists= 'replace')\n",
+    "pit_stops.to_sql('pit_stops', engine, index= False, if_exists= 'replace')\n",
+    "qualifying.to_sql('qualifying', engine, index = False, if_exists= 'replace')\n",
+    "status.to_sql('status', engine, index = False, if_exists= 'replace')\n",
+    "results.to_sql('results', engine, index = False, if_exists= 'replace')\n",
+    "sprint_results.to_sql('sprint_results', engine, index = False, if_exists= 'replace')\n",
+    "seasons.to_sql('seasons', engine, index = False, if_exists= 'replace')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Silverstone Circuit', 'UK', '70th Anniversary Grand Prix')\n",
+      "('Silverstone Circuit', 'UK', 'British Grand Prix')\n",
+      "('Donington Park', 'UK', 'European Grand Prix')\n",
+      "('Brands Hatch', 'UK', 'British Grand Prix')\n",
+      "('Brands Hatch', 'UK', 'European Grand Prix')\n",
+      "('Aintree', 'UK', 'British Grand Prix')\n"
+     ]
+    }
+   ],
+   "source": [
+    "with engine.connect() as connection:\n",
+    "    result = connection.execute(text(\"\"\"SELECT DISTINCT circuits.name, circuits.country, race.name\n",
+    "                               FROM circuits\n",
+    "                               JOIN race ON circuits.circuitId = race.circuitId\n",
+    "                                WHERE circuits.country = 'UK'\n",
+    "                            \"\"\"))\n",
+    "    rows = result.fetchall()\n",
+    "    for row in rows:\n",
+    "        print(row)"
    ]
   },
   {
@@ -1931,10 +1771,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# metadata.reflect(bind=engine)\n",
-    "# metadata.drop_all(bind= engine)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
