--- a/Formula 1 EDA.ipynb
+++ b/Formula 1 EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,29 +46,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "circuits = pd.read_csv(r'C:\\Users\\SAGAVERM\\Desktop\\DA projects\\F1\\circuits.csv')\n",
-    "constructor_results = pd.read_csv(r'C:\\Users\\SAGAVERM\\Desktop\\DA projects\\F1\\constructor_results.csv')\n",
-    "constructor_standings = pd.read_csv(r'C:\\Users\\SAGAVERM\\Desktop\\DA projects\\F1\\constructor_standings.csv')\n",
-    "constructors = pd.read_csv(r'C:\\Users\\SAGAVERM\\Desktop\\DA projects\\F1\\constructors.csv')\n",
-    "driver_standings = pd.read_csv(r'C:\\Users\\SAGAVERM\\Desktop\\DA projects\\F1\\driver_standings.csv')\n",
-    "drivers = pd.read_csv(r'C:\\Users\\SAGAVERM\\Desktop\\DA projects\\F1\\drivers.csv')\n",
-    "lap_times = pd.read_csv(r'C:\\Users\\SAGAVERM\\Desktop\\DA projects\\F1\\lap_times.csv')\n",
-    "pit_stops = pd.read_csv(r'C:\\Users\\SAGAVERM\\Desktop\\DA projects\\F1\\pit_stops.csv')\n",
-    "qualifying = pd.read_csv(r'C:\\Users\\SAGAVERM\\Desktop\\DA projects\\F1\\qualifying.csv')\n",
-    "races = pd.read_csv(r'C:\\Users\\SAGAVERM\\Desktop\\DA projects\\F1\\races.csv')\n",
-    "results = pd.read_csv(r'C:\\Users\\SAGAVERM\\Desktop\\DA projects\\F1\\results.csv')\n",
-    "seasons = pd.read_csv(r'C:\\Users\\SAGAVERM\\Desktop\\DA projects\\F1\\seasons.csv')\n",
-    "sprint_results = pd.read_csv(r'C:\\Users\\SAGAVERM\\Desktop\\DA projects\\F1\\sprint_results.csv')\n",
-    "status = pd.read_csv(r'C:\\Users\\SAGAVERM\\Desktop\\DA projects\\F1\\status.csv')"
+    "circuits = pd.read_csv(r'circuits.csv')\n",
+    "constructor_results = pd.read_csv(r'constructor_results.csv')\n",
+    "constructor_standings = pd.read_csv(r'constructor_standings.csv')\n",
+    "constructors = pd.read_csv(r'constructors.csv')\n",
+    "driver_standings = pd.read_csv(r'driver_standings.csv')\n",
+    "drivers = pd.read_csv(r'drivers.csv')\n",
+    "lap_times = pd.read_csv(r'lap_times.csv')\n",
+    "pit_stops = pd.read_csv(r'pit_stops.csv')\n",
+    "qualifying = pd.read_csv(r'qualifying.csv')\n",
+    "races = pd.read_csv(r'races.csv')\n",
+    "results = pd.read_csv(r'results.csv')\n",
+    "seasons = pd.read_csv(r'seasons.csv')\n",
+    "sprint_results = pd.read_csv(r'sprint_results.csv')\n",
+    "status = pd.read_csv(r'status.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# circuits = pd.read_csv(r'D:\\DA Projects\\F1-World-Championship-Analysis\\circuits.csv')\n",
+    "# constructor_results = pd.read_csv(r'D:\\DA Projects\\F1-World-Championship-Analysis\\constructor_results.csv')\n",
+    "# constructor_standings = pd.read_csv(r'D:\\DA Projects\\F1-World-Championship-Analysis\\constructor_standings.csv')\n",
+    "# constructors = pd.read_csv(r'D:\\DA Projects\\F1-World-Championship-Analysis\\constructors.csv')\n",
+    "# driver_standings = pd.read_csv(r'D:\\DA Projects\\F1-World-Championship-Analysis\\driver_standings.csv')\n",
+    "# drivers = pd.read_csv(r'D:\\DA Projects\\F1-World-Championship-Analysis\\drivers.csv')\n",
+    "# lap_times = pd.read_csv(r'D:\\DA Projects\\F1-World-Championship-Analysis\\lap_times.csv')\n",
+    "# pit_stops = pd.read_csv(r'D:\\DA Projects\\F1-World-Championship-Analysis\\pit_stops.csv')\n",
+    "# qualifying = pd.read_csv(r'D:\\DA Projects\\F1-World-Championship-Analysis\\qualifying.csv')\n",
+    "# races = pd.read_csv(r'D:\\DA Projects\\F1-World-Championship-Analysis\\races.csv')\n",
+    "# results = pd.read_csv(r'D:\\DA Projects\\F1-World-Championship-Analysis\\results.csv')\n",
+    "# seasons = pd.read_csv(r'D:\\DA Projects\\F1-World-Championship-Analysis\\seasons.csv')\n",
+    "# sprint_results = pd.read_csv(r'D:\\DA Projects\\F1-World-Championship-Analysis\\sprint_results.csv')\n",
+    "# status = pd.read_csv(r'D:\\DA Projects\\F1-World-Championship-Analysis\\status.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# circuits = pd.read_csv(r'C:\\Users\\SAGAVERM\\Desktop\\DA projects\\F1\\circuits.csv')\n",
+    "# constructor_results = pd.read_csv(r'C:\\Users\\SAGAVERM\\Desktop\\DA projects\\F1\\constructor_results.csv')\n",
+    "# constructor_standings = pd.read_csv(r'C:\\Users\\SAGAVERM\\Desktop\\DA projects\\F1\\constructor_standings.csv')\n",
+    "# constructors = pd.read_csv(r'C:\\Users\\SAGAVERM\\Desktop\\DA projects\\F1\\constructors.csv')\n",
+    "# driver_standings = pd.read_csv(r'C:\\Users\\SAGAVERM\\Desktop\\DA projects\\F1\\driver_standings.csv')\n",
+    "# drivers = pd.read_csv(r'C:\\Users\\SAGAVERM\\Desktop\\DA projects\\F1\\drivers.csv')\n",
+    "# lap_times = pd.read_csv(r'C:\\Users\\SAGAVERM\\Desktop\\DA projects\\F1\\lap_times.csv')\n",
+    "# pit_stops = pd.read_csv(r'C:\\Users\\SAGAVERM\\Desktop\\DA projects\\F1\\pit_stops.csv')\n",
+    "# qualifying = pd.read_csv(r'C:\\Users\\SAGAVERM\\Desktop\\DA projects\\F1\\qualifying.csv')\n",
+    "# races = pd.read_csv(r'C:\\Users\\SAGAVERM\\Desktop\\DA projects\\F1\\races.csv')\n",
+    "# results = pd.read_csv(r'C:\\Users\\SAGAVERM\\Desktop\\DA projects\\F1\\results.csv')\n",
+    "# seasons = pd.read_csv(r'C:\\Users\\SAGAVERM\\Desktop\\DA projects\\F1\\seasons.csv')\n",
+    "# sprint_results = pd.read_csv(r'C:\\Users\\SAGAVERM\\Desktop\\DA projects\\F1\\sprint_results.csv')\n",
+    "# status = pd.read_csv(r'C:\\Users\\SAGAVERM\\Desktop\\DA projects\\F1\\status.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1672,7 +1716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1684,7 +1728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1693,7 +1737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1704,7 +1748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1713,7 +1757,7 @@
        "75"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1745,7 +1789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1758,7 +1802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1776,7 +1820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1943,7 +1987,7 @@
        "[77 rows x 6 columns]"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1955,7 +1999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -4251,7 +4295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -4369,7 +4413,7 @@
        "[114 rows x 3 columns]"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4390,7 +4434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4399,7 +4443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4409,7 +4453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -4433,50 +4477,62 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Full Name</th>\n",
+       "      <th>forename</th>\n",
+       "      <th>surname</th>\n",
        "      <th>wins</th>\n",
+       "      <th>Full Name</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Lewis Hamilton</td>\n",
+       "      <td>Lewis</td>\n",
+       "      <td>Hamilton</td>\n",
        "      <td>104</td>\n",
+       "      <td>Lewis Hamilton</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Michael Schumacher</td>\n",
+       "      <td>Michael</td>\n",
+       "      <td>Schumacher</td>\n",
        "      <td>91</td>\n",
+       "      <td>Michael Schumacher</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Max Verstappen</td>\n",
+       "      <td>Max</td>\n",
+       "      <td>Verstappen</td>\n",
        "      <td>61</td>\n",
+       "      <td>Max Verstappen</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Sebastian Vettel</td>\n",
+       "      <td>Sebastian</td>\n",
+       "      <td>Vettel</td>\n",
        "      <td>53</td>\n",
+       "      <td>Sebastian Vettel</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Alain Prost</td>\n",
+       "      <td>Alain</td>\n",
+       "      <td>Prost</td>\n",
        "      <td>51</td>\n",
+       "      <td>Alain Prost</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "            Full Name  wins\n",
-       "0      Lewis Hamilton   104\n",
-       "1  Michael Schumacher    91\n",
-       "2      Max Verstappen    61\n",
-       "3    Sebastian Vettel    53\n",
-       "4         Alain Prost    51"
+       "    forename     surname  wins           Full Name\n",
+       "0      Lewis    Hamilton   104      Lewis Hamilton\n",
+       "1    Michael  Schumacher    91  Michael Schumacher\n",
+       "2        Max  Verstappen    61      Max Verstappen\n",
+       "3  Sebastian      Vettel    53    Sebastian Vettel\n",
+       "4      Alain       Prost    51         Alain Prost"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4487,7 +4543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -4527,7 +4583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -4708,7 +4764,7 @@
        "23       BMW Sauber     1"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4729,7 +4785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4747,7 +4803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -4865,7 +4921,7 @@
        "[277 rows x 3 columns]"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4876,7 +4932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
